[package]
name = "doom4rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde-big-array = "0.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["mixer"]